--- a/main.css
+++ b/main.css
@@ -21,19 +21,29 @@ p {
 }
 
 .button {
-        border: none;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 24px;
-        margin: 4px 2px;
-        cursor: pointer;
-
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #0980ED;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
 }
 
 
-.button4 {background-color: #e7e7e7; color: black;} /* Gray */ 
+.button:hover {background-color: #FA3A2A}
+
+.button:active {
+  background-color: #FA3A2A;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+
+}
 
 #ChNiveau {
 
