--- a/petanque.css
+++ b/petanque.css
@@ -1,13 +1,24 @@
 .button {
-    border: none;
-    padding: 15px 32px;
+    display: inline-block;
+    padding: 5px 15px;
+    font-size: 24px;
+    cursor: pointer;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font-size: 15px;
-    margin: 4px 2px;
-    cursor: pointer;
-
+    outline: none;
+    color: #fff;
+    background-color: #0980ED;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
 }
 
-.button4 {background-color: #e7e7e7; color: black;} /* Gray */ 
+
+.button:hover {background-color: #FA3A2A}
+
+.button:active {
+  background-color: #FA3A2A;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+
+}
