--- a/Instruction.css
+++ b/Instruction.css
@@ -1,4 +1,6 @@
-#clavier {
+#clavier { 
+
+   /*CSS permettant de styliser l'image*/ 
 
     display: block;
     margin-left: auto;
@@ -7,27 +9,27 @@
 
 
 p{
-    
+    /*ce CSS permet d'aligner toutes les balises p avec une taille de 25px*/ 
     text-align: center;
     font-size: 25px;
     
 }
 
 #jeux {
-
+    /*Css permettant de stylliser une image*/ 
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-h1 {
+h1 {  /*Toutes les h1 seront modifer avec le CSS avec un shadow/alignement des text au centre/italic et une police */ 
     text-shadow: 2px 2px 4px black;
     text-align: center;
     font-style: italic;
     text-decoration: underline;
 }
 
-.button {
+.button {  /* avec ceci nous avons la forme des boutons*/ 
     display: inline-block;
     padding: 15px 25px;
     font-size: 24px;
@@ -43,9 +45,9 @@ h1 {
 }
 
 
-.button:hover {background-color: #FA3A2A}
+.button:hover {background-color: #FA3A2A} /*Permet d'avoir la couleur au moment ou la souris passe sur le bouton*/ 
 
-.button:active {
+.button:active { /*permet d'avoir la couleur du bouton qui est activé après le clic de la souris*/ 
   background-color: #FA3A2A;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
